renaming, fix z.ai, fix swagger, readmeeee
