# docs/swagger.json
@@ -26,12 +26,12 @@
 		"contact": {}
 	},
 	"paths": {
-		"/api/zai/thinky": {
+		"/api/zai/thinky/chat": {
 			"post": {
-				"operationId": "ZaiProxy",
+				"operationId": "ZaiProxyChat",
 				"responses": {
 					"200": {
-						"description": "Ok",
+						"description": "JAI compatible response from Z.AI.",
 						"content": {
 							"application/json": {
 								"schema": {}
@@ -45,9 +45,11 @@
 						"description": "Internal Error"
 					}
 				},
+				"description": "Uses the Z.AI chat API endpoint for completion, enables reasoning.",
 				"security": [],
 				"parameters": [
 					{
+						"description": "Mandatory. Needs to be 'Bearer <Z.AI_API_KEY>', automatically set by JAI if you put in your Z.AI API key in the proxy config.",
 						"in": "header",
 						"name": "authorization",
 						"required": false,
@@ -56,6 +58,7 @@
 						}
 					},
 					{
+						"description": "Optional. For running locally: If available, reasoning will be logged to console.",
 						"in": "query",
 						"name": "logReasoning",
 						"required": false,
@@ -65,21 +68,24 @@
 					}
 				],
 				"requestBody": {
+					"description": "The JAI request body.",
 					"required": true,
 					"content": {
 						"application/json": {
-							"schema": {}
+							"schema": {
+								"description": "The JAI request body."
+							}
 						}
 					}
 				}
 			}
 		},
-		"/api/oai/thinky": {
+		"/api/zai/thinky/coding": {
 			"post": {
-				"operationId": "OaiProxy",
+				"operationId": "ZaiProxyCoding",
 				"responses": {
 					"200": {
-						"description": "Ok",
+						"description": "JAI compatible response from Z.AI.",
 						"content": {
 							"application/json": {
 								"schema": {}
@@ -93,11 +99,65 @@
 						"description": "Internal Error"
 					}
 				},
-				"description": "Proxy to OAI with optional preset.",
+				"description": "Uses the Z.AI coding API endpoint for completion, enables reasoning.",
 				"security": [],
 				"parameters": [
 					{
-						"description": "optional preset name to apply",
+						"description": "Mandatory. Needs to be 'Bearer <Z.AI_API_KEY>', automatically set by JAI if you put in your Z.AI API key in the proxy config.",
+						"in": "header",
+						"name": "authorization",
+						"required": false,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"description": "Optional. For running locally: If available, reasoning will be logged to console.",
+						"in": "query",
+						"name": "logReasoning",
+						"required": false,
+						"schema": {
+							"type": "boolean"
+						}
+					}
+				],
+				"requestBody": {
+					"description": "The JAI request body.",
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"description": "The JAI request body."
+							}
+						}
+					}
+				}
+			}
+		},
+		"/api/oro/thinky": {
+			"post": {
+				"operationId": "OroProxy",
+				"responses": {
+					"200": {
+						"description": "JAI compatible response from OpenRouter.",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					},
+					"401": {
+						"description": "Unauthorized"
+					},
+					"500": {
+						"description": "Internal Error"
+					}
+				},
+				"description": "Uses OpenRouter endpoint for completion, enables reasoning.",
+				"security": [],
+				"parameters": [
+					{
+						"description": "Optional. Enables use of a preset configured in your OpenRouter account, e.g. to set the system prompt or customise providers. Example:",
 						"in": "query",
 						"name": "preset",
 						"required": false,
@@ -106,6 +166,7 @@
 						}
 					},
 					{
+						"description": "Optional. For running locally: If available, reasoning will be logged to console.",
 						"in": "query",
 						"name": "logReasoning",
 						"required": false,
@@ -114,7 +175,7 @@
 						}
 					},
 					{
-						"description": "Authorization header (Bearer token)",
+						"description": "Mandatory. Needs to be 'Bearer <OpenRouter_API_KEY>', automatically set by JAI if you put in your OpenRouter API key in the proxy config.",
 						"in": "header",
 						"name": "authorization",
 						"required": false,
@@ -124,12 +185,12 @@
 					}
 				],
 				"requestBody": {
-					"description": "JAI request body",
+					"description": "The JAI request body.",
 					"required": true,
 					"content": {
 						"application/json": {
 							"schema": {
-								"description": "JAI request body"
+								"description": "The JAI request body."
 							}
 						}
 					}
@@ -141,7 +202,7 @@
 				"operationId": "GaiProxy",
 				"responses": {
 					"200": {
-						"description": "Ok",
+						"description": "JAI compatible response from GAI.",
 						"content": {
 							"application/json": {
 								"schema": {}
@@ -155,9 +216,11 @@
 						"description": "Internal Error"
 					}
 				},
+				"description": "Translates a JAI request into a Google AI request, sends it to GAI, then translates the response back to JAI format.",
 				"security": [],
 				"parameters": [
 					{
+						"description": "Mandatory. Needs to be 'Bearer <GoogleAI_API_KEY>', automatically set by JAI if you put in your Google AI Studio API key in the proxy config.",
 						"in": "header",
 						"name": "authorization",
 						"required": false,
@@ -166,6 +229,7 @@
 						}
 					},
 					{
+						"description": "Optional. Sets \"system instructions\" which the model will adhere more strictly to. LOCAL loads the system prompt in the server file system, i.e. systemprompt.md - use if you are running it locally, or you want to use the server's \"default\" system prompt. CONTEXT reads whatever contents put between <systemprompt>...</systemprompt> in the first message of the conversation and uses that as the system prompt. If not specified, no system prompt is set.",
 						"in": "query",
 						"name": "systemPromptMode",
 						"required": false,
@@ -174,6 +238,7 @@
 						}
 					},
 					{
+						"description": "Optional. For running locally: If available, reasoning will be logged to console.",
 						"in": "query",
 						"name": "logReasoning",
 						"required": false,
@@ -183,10 +248,13 @@
 					}
 				],
 				"requestBody": {
+					"description": "Mandatory. The JAI request body.",
 					"required": true,
 					"content": {
 						"application/json": {
-							"schema": {}
+							"schema": {
+								"description": "Mandatory. The JAI request body."
+							}
 						}
 					}
 				}
@@ -195,7 +263,10 @@
 	},
 	"servers": [
 		{
-			"url": "/"
+			"url": "https://[object Object]/"
+		},
+		{
+			"url": "https://[object Object]/"
 		}
 	]
 }
